--- a/_includes/important.html
+++ b/_includes/important.html
@@ -1,4 +1,4 @@
 <div class="flash flash-warn">
     {% octicon zap %}
-    <strong>Important: </strong>{{ include.content }}
+    <strong>Importante: </strong>{{ include.content }}
 </div>
